syntax = "proto3";

package auth;

option go_package = "genproto/auth";

message InfoUpdateRequest {
  string id = 1;
  string imageURL = 2;
  string role = 3;
  string designation = 4;
  string department = 5;
  string domain = 6;
  string country = 7;
  string tZone = 8;
}

message InfoUpdateResponse {
  bool isError = 1;
  string message = 2;
}